# UniversityDataBase

./: DBselect.py  Makefile  README.md  alembic.ini  connect.py  docker-compose.yaml  interface.py  models.py  pyproject.toml  seed.py  select.py
alembic/versions/: 7e0685cd75c9_first_migration.py
